--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="site-nav">
               <li class="site-catalog"><a class="site-link" href="#"><span>Каталог</span></a>
                 <ul class="sub-menu">
-                  <li><a class="new-stuff"href="#">Новинки</a></li>
+                  <li><a class="new-stuff" href="#">Новинки</a></li>
                   <li><a href="catalog.html">Сливочное</a></li>
                   <li><a href="#">Щербеты</a></li>
                   <li><a href="#">Фруктовый лед</a></li>
@@ -64,6 +64,7 @@
                 <li class="basket-block user-basket"><a href="#" class="basket">Пусто</a>
                 </li>
               </ul>
+              </div>
                </nav>
       
               <div class="container_other">
@@ -72,6 +73,7 @@
               </div>
             </div>
       </header>
+
 
       <div class="slider">
       
@@ -241,6 +243,7 @@
       </section>
 
       </div>
+
     </main>
 
     <footer class="footer-wrapper">
@@ -314,6 +317,8 @@
         </section>
         </div>
     </footer>
+    </div>
+
 
     <!--<section class="modal">
       <h2>Мы обязательно вам ответим!</h2>
