--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <ul class="site-navigation">
           <li class="site-item"><a class="site-link" href="#">Каталог</a>
             <ul class="sub-menu">
-              <li><a class="new-stuff" href="#">Новинки</a></li>
-              <li><a href="catalog.html">Сливочное</a></li>
-              <li><a href="#">Щербеты</a></li>
-              <li><a href="#">Фруктовый лед</a></li>
-              <li><a href="#">Мелорин</a></li>
+              <li class="sub-item"><a class="new-stuff" href="#">Новинки</a></li>
+              <li class="sub-item"><a href="catalog.html">Сливочное</a></li>
+              <li class="sub-item"><a href="#">Щербеты</a></li>
+              <li class="sub-item"><a href="#">Фруктовый лед</a></li>
+              <li class="sub-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
           <li class="site-item"><a class="site-link" href="#">Доставка и оплата</a></li>
@@ -121,7 +121,7 @@
         <div class="product-item hit">
           <img src="img/2.png"  width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           <div class="price">380<img src="img/rub.svg" width="26" height="31" alt="rub"><span>/кг</span></div>
-          <p><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
+          <p class=""><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
           <div class="product-btn">
           <button class="btn hidden">Быстрый просмотр</button>
           </div>
