--- a/catalog.html
+++ b/catalog.html
@@ -11,11 +11,12 @@
     <div class="content-wrapper">
     <header class="main-header">
       <nav class="main-navigation">
-        <a href="index.html" class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
+          <span class="visually-hidden">"GlassyShop"</span>
           <img src="img/logo.svg" width="154" height="64" alt="GlassyShop">
         </a>
         <ul class="site-navigation">
-          <li class="site-item"><a class="site-active" href="#">Каталог</a>
+          <li class="site-item"><a class="site-link site-active" href="#">Каталог</a>
             <ul class="sub-menu">
               <li class="sub-item"><a class="new-stuff" href="#">Новинки</a></li>
               <li class="sub-item sub-active"><a href="catalog.html">Сливочное</a></li>
@@ -29,30 +30,97 @@
         </ul>
         <ul class="user-navigation">
           <li class="user-btn">
-            <a class="search-link" href="#">
+            <a class="search-link link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
               <path d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
               </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
+            <section class="modal modal-search">
+              <form action="https://echo.htmlacademy.ru" method="get">
+                <div class=placeholder>
+                  <input type="search" name="search" id="search" placeholder="Что ищем?" required>
+                  <label for="search">Что ищем?</label>
+                </div>
+              </form>
+            </section>
           </li>
           <li class="user-btn">
-            <a class="login-link" href="#">
+            <a class="login-link link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
               <g><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g>
               </svg>
               <span>Вход</span>
             </a>
+            <section class="modal modal-login">
+              <form action="https://echo.htmlacademy.ru" method="post">
+                <div class="placeholder">
+                  <input type="email" name="email-enter" id="email-enter" placeholder="Электронная почта" required>
+                  <label for="email-enter">Электронная почта</label>
+                </div>
+                <div class="placeholder">
+                  <input type="password" name="password" id="password-enter" placeholder="Пароль" required>
+                  <label for="password-enter">Пароль</label>
+                </div>
+              <button class="btn" type="submit" name="enter">Войти</button>
+                <p class="login-help">
+                  <a class="help-password" href="#">Забыли пароль?</a>
+                  <a class="reg-new" href="#">Новая регистрация</a>
+                </p>
+              </form>
+            </section>
           </li>
           <li class="user-btn basket-full">
-            <a class="basket-link" href="#">
+            <a class="basket-link link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/>
               <circle fill="#343434" cx="6.984" cy="18" r="2"/>
               <circle fill="#343434" cx="15.984" cy="18" r="2"/>
               <path fill="#343434" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
               </svg>
-              <span class="visually-hidden">Корзина</span><span>2 товара</span>
+              <span class="visually-hidden">Корзина</span>
+              <span>2 товара</span>
             </a>
+              <div class="modal">
+                <div class="basket-fill">
+                  <table class="basket-table">
+                    <tr>
+                      <td>
+                      <button class="close-btn">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#231F20" d="M10.979.728l-.708-.707L5.5 4.792.729.021.021.728 4.793 5.5.021 10.271l.707.708L5.5 6.207l4.771 4.772.708-.708L6.207 5.5z"/>
+                      </svg>
+                      </button>
+                      </td>
+                      <td><img src="img/1.png" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
+                      <td><a class="table-link" href="#">Пломбир с апельсиновым джемом</a></td>
+                      <td><span>1,5 кг x <span class="table-price">200 руб.</span></span></td>
+                      <td><span class="table-value">300 руб.</span></td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <button class="close-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                        <path fill="#231F20" d="M10.979.728l-.708-.707L5.5 4.792.729.021.021.728 4.793 5.5.021 10.271l.707.708L5.5 6.207l4.771 4.772.708-.708L6.207 5.5z"/>
+                        </svg>
+                        </button>
+                      </td>
+                      <td><img src="img/3.png" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада"></td>
+                      <td class="table-link"> <a href="#">Клубничный пломбир с присыпкой из белого шоколада</a></td>
+                      <td><span>1,5 кг x <span class="table-price">200 руб.</span></span></td>
+                      <td><span class="table-value">450 руб.</span></td>
+                    </tr>
+                    <tr>
+                      <td class="line" colspan="5"></td>
+                    </tr>
+                    <tr>
+                      <td class="sum" colspan="5"><b>Итого: 750 руб.</b></td>
+                    </tr>
+                  </table>
+                  <div class="checkout">
+                    <button class="btn">Оформить заказ</button>
+                  </div>
+                </div>
+              </div>
           </li>
         </ul>
         </nav>
@@ -86,21 +154,15 @@
             </div>
           </fieldset>
           <fieldset>
+            <legend class="price-controls">Цена: 100 руб. ‒ 500 руб.</legend>
               <div class="range-filter">
-                <div class="price-controls">
-                  <legend>Цена: 100 руб. ‒ 500 руб.</legend>
-                </div>
                 <div class="range-controls">
                   <div class="scale">
                   <div class="bar"></div>
                 </div>
-                <div class="toggle toggle-min"></div>
-                <div class="toggle toggle-max"></div>
-                </div>
-                <!--<div class="price-controls">
-                  <label class="min-price">от <input name="min-price" type="text" value="100"></label>
-                  <label class="max-price">до <input name="max-price" type="text" value="500"></label>
-                </div>-->
+                  <div class="toggle toggle-min"></div>
+                  <div class="toggle toggle-max"></div>
+                  </div>
               </div>
           </fieldset>
           <fieldset class="fat">
@@ -231,7 +293,7 @@
         <div class="product-item">
           <img src="img/10.png"  width="267" height="267" alt="Сливочное с ментоловым сиропом">
           <div class="price">435<img src="img/rub.svg" width="26" height="31" alt="rub"><span>/кг</span></div>
-          <p><a href="#">Сливочное с ментоловым сиропома</a></p>
+          <p><a href="#">Сливочное с ментоловым сиропом</a></p>
           <div class="product-btn">
           <button class="btn hidden">Быстрый просмотр</button>
           </div>
@@ -263,7 +325,7 @@
               </a>
             </li>
             <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
-            <li class="pagination-item"><a>2</a></li>
+            <li class="pagination-item"><a href="#">2</a></li>
             <li class="pagination-item"><a href="#">3</a></li>
             <li class="pagination-item"><a href="#">4</a></li>
             <li class="pagination-item"><a href="#">5</a></li>
