--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
+          <span class="visually-hidden">"GlassyShop"</span>
           <img src="img/logo.svg" width="154" height="64" alt="GlassyShop">
         </a>
         <ul class="site-navigation">
@@ -33,23 +34,48 @@
         </ul>
         <ul class="user-navigation">
           <li class="user-btn">
-            <a class="search-link" href="#">
+            <a class="search-link link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
               <path d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
               </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
+            <section class="modal modal-search">
+              <form action="https://echo.htmlacademy.ru" method="get">
+                <div class=placeholder>
+                  <input type="search" name="search" id="search" placeholder="Что ищем?" required>
+                  <label for="search">Что ищем?</label>
+                </div>
+              </form>
+            </section>
           </li>
           <li class="user-btn">
-            <a class="login-link" href="#">
+            <a class="login-link link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
               <g><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g>
               </svg>
               <span>Вход</span>
             </a>
+            <section class="modal modal-login">
+              <form action="https://echo.htmlacademy.ru" method="post">
+                <div class="placeholder">
+                  <input type="email" name="email-enter" id="email-enter" placeholder="Электронная почта" required>
+                  <label for="email-enter">Электронная почта</label>
+                </div>
+                <div class="placeholder">
+                  <input type="password" name="password" id="password-enter" placeholder="Пароль" required>
+                  <label for="password-enter">Пароль</label>
+                </div>
+              <button class="btn" type="submit" name="enter">Войти</button>
+                <p class="login-help">
+                  <a class="help-password" href="#">Забыли пароль?</a>
+                  <a class="reg-new" href="#">Новая регистрация</a>
+                </p>
+              </form>
+            </section>
           </li>
           <li class="user-btn">
-            <a class="basket-link" href="#">
+            <a class="basket-link link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
               <g><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
               <circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g>
@@ -185,6 +211,29 @@
             <b class="phone-part2">8 812 450-25-25</b>
             <p class="time-part">(с 10 до 20 ежедневно)</p>
             <a class="btn map-btn" href="feedback.html">Форма обратной связи</a>
+          </section>
+          <section class="modal-feedback">
+              <p>Мы обязательно вам ответим!</p>
+                <button class="modal-close">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17"><path fill="#231F20" d="M17.454 1.46L16.04.046 9 7.086 1.96.046.546 1.46l7.04 7.04-7.04 7.04 1.414 1.414L9 9.914l7.04 7.04 1.414-1.414-7.04-7.04z"/></svg>
+                </button>
+              <form action="https://echo.htmlacademy.ru" method="post">
+                <div class="placeholder">
+                  <input type="text" name="user-name" id="user-name" placeholder="Как вас зовут?" required>
+                  <label for="user-name">Как вас зовут?</label>
+                </div>
+                <div class="placeholder">
+                  <input type="email" name="user-mail" id="user-mail" placeholder="Ваша почта для ответа?" required>
+                  <label for="user-mail">Ваша почта для ответа?</label>
+                </div>
+                <div class="placeholder">
+                  <textarea id="user-text" placeholder="Напишите что нибудь..." required></textarea>
+                  <label for="user-text">Напишите что нибудь...</label>
+                </div>
+                <div class="feedback">
+                <button class="btn feedback-btn" type="submit" name="send-email">Отправить</button>
+                </div>
+              </form>
           </section>
           <img src="img/map.jpg" width="1200" height="430" alt="Адрес главного офиса и офлайн магазина: ул.Большая Конюшенная 19/8, Санкт-Петербург">
       </div>
