--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="content-wrapper">
@@ -30,7 +30,7 @@
         </ul>
         <ul class="user-navigation">
           <li class="user-btn">
-            <a class="search-link link" href="#">
+            <a class="search-link search" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
               <path d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
               </svg>
@@ -46,7 +46,7 @@
             </section>
           </li>
           <li class="user-btn">
-            <a class="login-link link" href="#">
+            <a class="login-link login" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
               <g><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g>
               </svg>
@@ -70,8 +70,8 @@
               </form>
             </section>
           </li>
-          <li class="user-btn basket-full">
-            <a class="basket-link link" href="#">
+          <li class="user-btn">
+            <a class="basket-link basket basket-full" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/>
               <circle fill="#343434" cx="6.984" cy="18" r="2"/>
               <circle fill="#343434" cx="15.984" cy="18" r="2"/>
@@ -153,7 +153,7 @@
               </select>
             </div>
           </fieldset>
-          <fieldset>
+          <fieldset class="sort-section">
             <legend class="price-controls">Цена: 100 руб. ‒ 500 руб.</legend>
               <div class="range-filter">
                 <div class="range-controls">
