--- a/catalog.html
+++ b/catalog.html
@@ -169,20 +169,20 @@
             <legend>Жирность:</legend>
               <ul class="fat-filter">
                 <li class="filter-option">
-                  <input class="visually-hidden" type="radio" name="fat" id="zero" value="0" checked disabled>
-                  <label for="zero">0%</label>
+                  <input class="visually-hidden" type="radio" name="fat" id="zero" value="0" disabled>
+                  <label for="zero"><span>0%</span></label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="radio" name="fat" id="ten" value="10">
-                  <label for="ten">до 10%</label>
+                  <label for="ten"><span>до 10%</span></label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden" type="radio" name="fat" id="thirty" value="30">
-                  <label for="thirty">до 30%</label>
+                  <input class="visually-hidden" type="radio" name="fat" id="thirty" value="30" checked>
+                  <label for="thirty"><span>до 30%</span></label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="radio" name="fat" id="more" value="more">
-                  <label for="more">выше 30%</label>
+                  <label for="more"><span>выше 30%</span></label>
                 </li>
               </ul>
           </fieldset>
