--- a/catalog.html
+++ b/catalog.html
@@ -379,5 +379,6 @@
       </section>
     </footer>
     </div>
+  <script src="js/modal.js"></script>
   </body>
 </html>                            
