--- a/catalog.html
+++ b/catalog.html
@@ -217,7 +217,7 @@
           </div>
         </form>
       </section>
-      <section class="products inner">
+      <section class="products">
         <div class="product-item">
           <img src="img/1.png"  width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <div class="price">310<img src="img/rub.svg" width="26" height="31" alt="rub"><span>/кг</span></div>
@@ -373,12 +373,12 @@
       </section>
       <section class="copyright">
         <div class="copyright-logo">
-          <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="107" height="38" alt="logo-htmlacademy"></a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="107" height="38" alt="logo-htmlacademy"></a>
         </div>
-        <p>Сделано в <a class="copyright-link" href="https://htmlacademy.ru">HTML Academy</a> @ 2017</p>
+        <p>Сделано в <a class="copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> @ 2017</p>
       </section>
     </footer>
     </div>
-  <script src="js/modal.js"></script>
+  <script src="js/modal.min.js"></script>
   </body>
 </html>                            
