--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="img/logo.svg" width="154" height="64" alt="GlassyShop">
         </a>
         <ul class="site-navigation">
-          <li class="site-item"><a class="site-link" href="#">Каталог</a>
+          <li class="site-item"><a class="site-link" href="#"><span>Каталог</span></a>
             <ul class="sub-menu">
               <li class="sub-item"><a class="new-stuff" href="#">Новинки</a></li>
               <li class="sub-item"><a href="catalog.html">Сливочное</a></li>
@@ -29,8 +29,8 @@
               <li class="sub-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li class="site-item"><a class="site-link" href="#">Доставка и оплата</a></li>
-          <li class="site-item"><a class="site-link" href="#">О Компании</a></li>
+          <li class="site-item"><a class="site-link" href="#"><span>Доставка и оплата</span></a></li>
+          <li class="site-item"><a class="site-link" href="#"><span>О Компании</span></a></li>
         </ul>
         <ul class="user-navigation">
           <li class="user-btn">
@@ -92,7 +92,8 @@
           </div>
         </div>
     </header>
-    <div class="slider">
+    <main class="main-wrapper">
+     <div class="slider">
       <div class="slide" id="slide1">
         <div class="slider-title">
         Крем-брюле и пломбир с малиновым джемом</div>
@@ -118,7 +119,6 @@
         <label for="btn-3"></label>
       </div>
     </div>
-    <main class="main-wrapper">
       <section class="free-sweets">
         <article class="raspberry-free">
           <h3>Малинка даром!</h3>
@@ -170,7 +170,7 @@
         </div>
       </section>
       <section class="features">
-        <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+        <h3>Магазин Глэйси  — это онлайн - и офлайн -магазин по продаже мороженого собственного производства на развес</h3>
           <ul class="feature-list">
             <li class="feature-item ice-cream">
               <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
@@ -275,9 +275,9 @@
       </section>
       <section class="copyright">
         <div class="copyright-logo">
-          <a href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width="107" height="38" alt="logo-htmlacademy"></a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="107" height="38" alt="logo-htmlacademy"></a>
         </div>
-        <p>Сделано в <a class="copyright-link" href="https://htmlacademy.ru">HTML Academy</a> @ 2017</p>
+        <p>Сделано в <a class="copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> @ 2017</p>
       </section>
     </footer>
     </div>
