--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <input type="radio" id="btn-1" name="toggle" checked>
@@ -92,7 +92,7 @@
           </div>
         </div>
     </header>
-    <main class="main-wrapper">
+    <main>
      <div class="slider">
       <div class="slide" id="slide1">
         <div class="slider-title">
@@ -283,5 +283,6 @@
     </div>
     </div>
   <script src="js/modal.min.js"></script>
+  <script src="js/feedback.min.js"></script>
   </body>
 </html>                            
